add image to SKU
